--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/knockout-3.3.0.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
